--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "96qbhy/laravel-api-auth": "^4.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "swooletw/laravel-swoole": "^2.6",
-      "ext-http": "*"
+        "swooletw/laravel-swoole": "^2.6"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
